# ga_pyphetools_cohorts

./: .gitignore  MAKE_SYNTHETIC_COHORT.sh  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: qc.yml
ga/: __init__.py  ga.py
notebooks/: ESHG_poster_plot_marfan_PHENOPACKET_STORE.ipynb  ESHG_poster_plot_marfan_SYNTHETIC_DATA.ipynb  auprc_by_iteration_Marfan syndrome_60_PHENOPACKET_STORE.tsv  auprc_by_iteration_Marfan syndrome_60_SYNTHETIC_DATA.tsv  auprc_plot_marfan_phenopacket_store_updated.ipynb  plot_marfan_PHENOPACKET_STORE.ipynb  plot_marfan_SYNTHETIC_DATA.ipynb
src/ga/: cli.py  cli_make_phenopacket_store_data.py  cli_make_synthetic_data.py  cli_opt_hyper.py  cli_run.py  cli_run_all.py  cli_run_rf.py
src/ga/utils/: cohort.py  ga.py  hpo.py  phenopacket.py  rf.py  utils.py  utils_dt.py  utils_lr.py  utils_rf.py  vertical_to_horizontal.py
src/utils/: cohort.py  ga.py  hpo.py  utils.py
tests/: test_ga.py  test_phenopacket.py
tests/data/: test_pt_df.csv
tests/data/one_ppkt_Craniometaphyseal_dysplasia/: PMID_20186813_6-year-old_male_patient.json
tests/data/synthetic_data_cohort/: Cystic_fibrosis_patient_1.json  Cystic_fibrosis_patient_10.json  Cystic_fibrosis_patient_2.json  Cystic_fibrosis_patient_3.json  Cystic_fibrosis_patient_4.json  Cystic_fibrosis_patient_5.json  Cystic_fibrosis_patient_6.json  Cystic_fibrosis_patient_7.json  Cystic_fibrosis_patient_8.json  Cystic_fibrosis_patient_9.json  Marfan_syndrome_patient_1.json  Marfan_syndrome_patient_10.json  Marfan_syndrome_patient_2.json  Marfan_syndrome_patient_3.json  Marfan_syndrome_patient_4.json  Marfan_syndrome_patient_5.json  Marfan_syndrome_patient_6.json  (+3 more)
