[tool.poetry]
name = "ga"
version = "0.1.0"
description = ""
authors = ["Justin Reese <justaddcoffee@gmail.com>"]
readme = "README.md"
packages = [{include = "ga"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2"
semsimian = {git = "https://github.com/monarch-initiative/semsimian", rev = "main"}
networkx = "^3.2"
wget = "^3.2"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
maturin = "*"
grape = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
