[tool.poetry]
name = "ga"
version = "0.1.0"
description = ""
authors = ["Justin Reese <justaddcoffee@gmail.com>"]
readme = "README.md"
packages = [{ include = "ga", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
semsimian = "0.2.11"
networkx = "^3.2"
wget = "^3.2"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
maturin = "*"
click = "^8.1.3"
phenotype2phenopacket = { git = "https://github.com/yaseminbridges/phenotype2phenopacket.git", branch = "main" }

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.scripts]
ga = "ga.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
